feat: add images to webpages

--- a/coast.html
+++ b/coast.html
@@ -23,5 +23,10 @@
         </li>
       </ul>
     </nav>
+    <section>
+        <figure>
+            <img src="assets/images/Afghan_cookie.jpg" alt="An image of a cookie">
+        </figure>
+    </section>
   </body>
 </html>
