added a button and temp logo

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 </head>
 
 <body>
-    
+
     <!-- Header -->
     <header>
         <a href="index.html">
-            <h1 id="logo">Ms Hors D'ouvre</h1>
+            <button class="header-button">Ms</button>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">
