added shadow to nav bar. tried to make logo centered

--- a/index.html
+++ b/index.html
@@ -51,19 +51,15 @@
 
     <!-- Main content -->
     <main>
-        <p>First, use the download button to download the files listed below. Place the files in the root directory of your website.
-
-            android-chrome-192x192.png
-            android-chrome-512x512.png
-            apple-touch-icon.png
-            favicon-16x16.png
-            favicon-32x32.png
-            favicon.ico
-            site.webmanifest
-            Next, copy the following link tags and paste them into the head of your HTML.</p>
-        <p>When creating a photo gallery or something like that you might need to place some caption text or description over the image. You can use the CSS positioning methods in combination with the margin property to position or place the text over an image (i.e. the <img> element).
-
-            Let's take a look at the following example to understand how it basically works</p>
+       <p>typeLorem Ipsum is simply dummy text of the
+         printing and typesetting industry. Lorem Ipsum has 
+         been the industry's standard dummy text ever since the 1500s, 
+         when an unknown printer took a galley of type and scrambled it 
+         to make a type specimen book. It has survived not only five centuries,
+          but also the leap into electronic typesetting, remaining essentially 
+          unchanged. It was popularised in the 1960s with the release of Letraset 
+          sheets containing Lorem Ipsum passages, and more recently with 
+        desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
     </main>
 
 
