made the background suit the length, fixed padding problem

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="gallery.html">Shop</a></li>
+                <li><a href="signup.html">Feedback</a></li>
             </ul>
         </nav>
     </header>
@@ -51,7 +51,7 @@
 
     <!-- Main content -->
     <main>
-        
+
         <!-- Hero section -->
         <section id="hero">
             <div id="cover-text">
