--- a/feedback.html
+++ b/feedback.html
@@ -41,9 +41,9 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html" >Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="feedback.html">Feedback</a></li>
+                <li><a href="feedback.html" class="active">Feedback</a></li>
             </ul>
         </nav>
     </header>
