--- a/shop.html
+++ b/shop.html
@@ -41,8 +41,8 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html" class="active">Shop</a></li>
                 <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
