made things more readable in feedback

--- a/feedback.html
+++ b/feedback.html
@@ -55,9 +55,29 @@
         <!-- Hero section -->
         <section id="hero">
             <div id="cover-text">
-                <h2>Finger Lickin' good</h2>
+                <h2></h2>
+            </div>
+
+            <!-- Comment section -->
+
+            <h2>Comments</h2>
+            <div class="temp-comments">
+                <div class="comment">
+                    <p>Really enjoyed the food!</p>
+                </div>
+                <div class="comment">
+                    <p>Not only was the canapes pretty, they were delicious as well</p>
+            </div>
+
+            <div class="comment-section">
+                <h2>Give us feedback</h2>
+                <form id="comment-form" action="" method="post">
+                    <textarea id="comment-input" placeholder="Write a comment"></textarea>
+                    <button type="submit">Submit</button>
+                </form>
             </div>
         </section>
+
     </main>
 
 
