--- a/shop.html
+++ b/shop.html
@@ -53,11 +53,43 @@
     <main>
 
         <!-- Hero section -->
-        <section id="hero">
+        <section id="hero-shop">
             <div id="cover-text">
                 <h2>Finger Lickin' good</h2>
             </div>
+            <section id="shop-canape-selection">
+                <h2>Canapes</h2>
+                <div id="shop">
+                    <h3>Salmon Mousse</h3>
+                    <div class="shop-item" id="salmon-mousse">
+                        <h4>400kr/10</h4>
+                        <p>Monday</p>
+                    </div>
+                    <h3>Salmon Roll Blini</h3>
+                    <div class="shop-item" id="salmon-roll-blini">
+                        <h4>400kr/10</h4>
+                        <p>Wednesday</p>
+                    </div>
+                    <h3>Duck Liver Mousse</h3>
+                    <div class="shop-item" id="duck-liver-mousse">
+                        <h4>400kr/10</h4>    
+                        <p>Friday</p>
+                    </div>
+                    <h3>Goatscheese Filobasket</h3>
+                    <div class="shop-item" id="goatscheese-filobasket">    
+                        <h4>400kr/10</h4>
+                        <p>Saturday</p>
+                    </div>
+                    <h3>White Chocolate Mousse</h3>
+                    <div class="shop-item" id="white-chocolate-mousse">    
+                        <h4>400kr/10</h4>
+                        <p>Sunday</p>
+                    </div>
+                </div>
+            </section>
         </section>
+         
+
     </main>
 
 
