--- a/shop copy.html
+++ b/shop copy.html
@@ -41,9 +41,9 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" >Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="feedback.html" class="active">Feedback</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html" class="active">Shop</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
     </header>
@@ -53,30 +53,37 @@
     <main>
 
         <!-- Hero section -->
-        <section id="hero">
+        <section id="hero-shop">
             <div id="cover-text">
-                <h2></h2>
+                <h2>Finger Lickin' good</h2>
             </div>
-
-            <!-- Comment section -->
-
-            <h2>Comments</h2>
-            <div class="temp-comments">
-                <div class="comment">
-                    <p>Really enjoyed the food!</p>
+            <section id="shop-canape-selection">
+                <h2>Canapes</h2>
+                <div id="shop">
+                    <h3>Salmon Mousse</h3>
+                    <div class="shop-item" id="salmon-mousse">
+                        <h4>400kr/10</h4>
+                    </div>
+                    <h3>Salmon Roll Blini</h3>
+                    <div class="shop-item" id="salmon-roll-blini">
+                        <h4>400kr/10</h4>                        
+                    </div>
+                    <h3>Duck Liver Mousse</h3>
+                    <div class="shop-item" id="duck-liver-mousse">
+                        <img src="assets/images/Duck-liver-mousse.jpg" alt="testing">
+                    </div>
+                    <h3>Goatscheese Filobasket</h3>
+                    <div class="shop-item" id="goatscheese-filobasket">    
+                        <h4>400kr/10</h4>
+                    </div>
+                    <h3>White Chocolate Mousse</h3>
+                    <div class="shop-item" id="white-chocolate-mousse">    
+                        <h4>400kr/10</h4>
+                    </div>
                 </div>
-                <div class="comment">
-                    <p>Not only was the canapes pretty, they were delicious as well</p>
-            </div>
-
-            <div class="comment-section">
-                <h2>Give us feedback</h2>
-                <form id="comment-form" action="" method="post">
-                    <textarea id="comment-input" placeholder="Write a comment" rows="10" cols="20"></textarea>
-                    <button type="submit">Submit</button>
-                </form>
-            </div>
+            </section>
         </section>
+         
 
     </main>
 
