--- a/shop.html
+++ b/shop.html
@@ -54,35 +54,35 @@
 
         <!-- Hero section -->
         <section id="hero-shop">
-            <div id="cover-text">
-                <h2>Finger Lickin' good</h2>
+            <div id="cover-text-shop">
+                <h2>Our Products</h2>
             </div>
-            <section id="shop-canape-selection">
-                <h2>Canapes</h2>
-                <div id="shop">
-                    <h3>Salmon Mousse</h3>
-                    <div class="shop-item" id="salmon-mousse">
-                        <h4>400kr/10</h4>
-                    </div>
-                    <h3>Salmon Roll Blini</h3>
-                    <div class="shop-item" id="salmon-roll-blini">
-                        <h4>400kr/10</h4>                        
-                    </div>
-                    <h3>Duck Liver Mousse</h3>
-                    <div class="shop-item" id="duck-liver-mousse">
-                        <h4>400kr/10</h4>
-                    </div>
-                    <h3>Goatscheese Filobasket</h3>
-                    <div class="shop-item" id="goatscheese-filobasket">    
-                        <h4>400kr/10</h4>
-                    </div>
-                    <h3>White Chocolate Mousse</h3>
-                    <div class="shop-item" id="white-chocolate-mousse">    
-                        <h4>400kr/10</h4>
-                    </div>
-                </div>
-            </section>
         </section>
+
+        <section id="shop-canape-selection">
+            <div id="shop">
+                <h3>Salmon Mousse</h3>
+                <div class="shop-item" id="salmon-mousse">
+                    <h4>400kr/10</h4>
+                </div>
+                <h3>Salmon Roll Blini</h3>
+                <div class="shop-item" id="salmon-roll-blini">
+                    <h4>400kr/10</h4>                        
+                </div>
+                <h3>Duck Liver Mousse</h3>
+                <div class="shop-item" id="duck-liver-mousse">
+                    <h4>400kr/10</h4>
+                </div>
+                <h3>Goatscheese Filobasket</h3>
+                <div class="shop-item" id="goatscheese-filobasket">    
+                    <h4>400kr/10</h4>
+                </div>
+                <h3>White Chocolate Mousse</h3>
+                <div class="shop-item" id="white-chocolate-mousse">    
+                    <h4>400kr/10</h4>
+                </div>
+            </div>
+        </section>      
          
 
     </main>
