--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
         <!-- Hero section -->
         <section id="hero">
-            <div id="cover-text">
-                <h2>Finger Lickin' good</h2>
+            <div id="cover-text-test">
+                <h1>Finger Lickin' good</h1>
             </div>
         </section>
     </main>
