feedback and comments

--- a/feedback.html
+++ b/feedback.html
@@ -67,12 +67,19 @@
                 </div>
                 <div class="comment">
                     <p>Not only was the canapes pretty, they were delicious as well</p>
+                </div>
+                <div class="comment">
+                    <p>It looked better on the pictures</p>
+                </div>
+                <div class="comment">
+                    <p>They outdid themselves once again!</p>
+                </div>
             </div>
 
-            <div class="comment-section">
+            <div class="feedback-section">
                 <h2>Give us feedback</h2>
                 <form id="comment-form" action="" method="post">
-                    <textarea id="comment-input" placeholder="Write a comment" rows="10" cols="20"></textarea>
+                    <textarea id="comment-input" placeholder="Write a comment..." rows="10" cols="20"></textarea>
                     <button type="submit">Submit</button>
                 </form>
             </div>
