--- a/feedback.html
+++ b/feedback.html
@@ -60,13 +60,15 @@
 
             <!-- Comment section -->
 
-            <h2>Comments</h2>
+            <h2>Reviews</h2>
             <div class="temp-comments">
                 <div class="comment">
                     <p>Really enjoyed the food!</p>
                 </div>
                 <div class="comment">
-                    <p>Not only was the canapes pretty, they were delicious as well</p>
+                    <p>Not only was the canapes pretty, they were delicious as well. I did not think they could be 
+                        as good as they looked. But colour me surprised!
+                    </p>
                 </div>
                 <div class="comment">
                     <p>It looked better on the pictures</p>
@@ -77,7 +79,7 @@
             </div>
 
             <div class="feedback-section">
-                <h2>Give us feedback</h2>
+                <h2>We welcome your feedback</h2>
                 <form id="comment-form" action="" method="post">
                     <textarea id="comment-input" placeholder="Write a comment..." rows="10" cols="20"></textarea>
                     <button type="submit">Submit</button>
