reduced code review

--- a/feedback.html
+++ b/feedback.html
@@ -58,32 +58,33 @@
                 <h2></h2>
             </div>
 
-            <!-- Comment section -->
-
-            <h2>Reviews</h2>
-            <div class="temp-comments">
-                <div class="comment">
-                    <p>Really enjoyed the food!</p>
-                </div>
-                <div class="comment">
-                    <p>Not only was the canapes pretty, they were delicious as well. I did not think they could be 
+            <!-- Review/feedback section -->
+            <div id="Review">
+                <h2>Reviews</h2>
+                <div class="temp-comments">
+                    <div class="comment">
+                        <p>Really enjoyed the food!</p>
+                    </div>
+                    <div class="comment">
+                        <p>Not only was the canapes pretty, they were delicious as well. I did not think they could be 
                         as good as they looked. But colour me surprised!
-                    </p>
+                        </p>
+                    </div>
+                    <div class="comment">
+                        <p>It looked better on the pictures</p>
+                    </div>
+                    <div class="comment">
+                        <p>They outdid themselves once again!</p>
+                    </div>
                 </div>
-                <div class="comment">
-                    <p>It looked better on the pictures</p>
-                </div>
-                <div class="comment">
-                    <p>They outdid themselves once again!</p>
-                </div>
-            </div>
 
-            <div class="feedback-section">
-                <h2>We welcome your feedback</h2>
-                <form id="comment-form" action="" method="post">
-                    <textarea id="comment-input" placeholder="Write a comment..." rows="10" cols="20"></textarea>
-                    <button type="submit">Submit</button>
-                </form>
+                <div class="feedback-section">
+                    <h2>We welcome your feedback</h2>
+                    <form id="comment-form" action="" method="post">
+                        <textarea id="comment-input" placeholder="Write a comment..." rows="10" cols="20"></textarea>
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
             </div>
         </section>
 
