feedback-thanks.html

--- a/feedback-thanks.html
+++ b/feedback-thanks.html
@@ -41,9 +41,9 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="index.html" >Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="feedback.html" class="active">Feedback</a></li>
+                <li><a href="feedback.html">Feedback</a></li>
             </ul>
         </nav>
     </header>
@@ -54,42 +54,15 @@
 
         <!-- Hero section -->
         <section id="hero">
-            <div id="cover-text">
-                <h2></h2>
+            <div id="cover-text-test">
+                <h1>Thank you for your comment!</h1>
             </div>
-
-            <!-- Review/feedback section -->
-            <div id="Review">
-                <h2>Reviews</h2>
-                <div class="temp-comments">
-                    <div class="comment">
-                        <p>Really enjoyed the food!</p>
-                    </div>
-                    <div class="comment">
-                        <p>Not only was the canapes pretty, they were delicious as well. I did not think they could be 
-                        as good as they looked. But colour me surprised!
-                        </p>
-                    </div>
-                    <div class="comment">
-                        <p>It looked better on the pictures</p>
-                    </div>
-                    <div class="comment">
-                        <p>They outdid themselves once again!</p>
-                    </div>
-                </div>
-
-                <div class="feedback-section">
-                    <label for="feedback-section" id="feedback-text">
-                        <h2>Your feedback is always welcome</h2>
-                    </label>
-                    <form id="comment-form" action="feedback-thanks.html" method="post">
-                        <textarea id="comment-input" placeholder="Write a comment..." rows="10" cols="20"></textarea>
-                        <button type="submit" value="Submit">Submit</button>
-                    </form>
-                </div>
+            <div>
+                <a href="index.html">
+                    <button class="header-button">Click here to get back</button>
+                </a>
             </div>
         </section>
-
     </main>
 
 
