--- a/feedback.html
+++ b/feedback.html
@@ -82,9 +82,9 @@
                     <label for="feedback-section" id="feedback-text">
                         <h2>Your feedback is always welcome</h2>
                     </label>
-                    <form id="comment-form" action="thanks.html" method="Post">
-                        <textarea id="comment-input" placeholder="Write a comment..." rows="10" cols="20"></textarea>
-                        <button type="submit" value="Submit">Submit</button>
+                    <form id="comment-form" action="thanks.html">
+                        <textarea id="comment-input" name="comment-input" placeholder="Write a comment..." rows="10" cols="20"></textarea>
+                        <button type="submit">Submit</button>
                     </form>
                 </div>
             </div>
