--- a/thanks.html
+++ b/thanks.html
@@ -55,10 +55,10 @@
         <!-- Hero section -->
         <section id="hero">
             <div id="cover-text-test">
-                <h1>Thank you for your comment!</h1>
+                <h1>Thank you for your feedback!</h1>
             </div>
             <div>
-                <a href="index.html">
+                <a href="feedback.html">
                     <button class="header-button">Click here to get back</button>
                 </a>
             </div>
