--- a/index.html
+++ b/index.html
@@ -51,11 +51,18 @@
 
     <!-- Main content -->
     <main>
-
         <!-- Hero section -->
         <section id="hero">
-            <div id="cover-text-test">
-                <h1>Finger Lickin' good</h1>
+            <div id="info">
+                <div id="info-text">
+                    <h2>Have you ever wanted to taste a bit of luxury?</h2>
+                    <p>Experience the culinary artistry of canapés 
+                    firsthand. Discover a world of flavors, textures, 
+                    and creativity in every bite.
+                    From smoked salmon on crostini to white chocolate mousse,
+                    each canapé is a delightful masterpiece that elevates
+                    your gatherings and leaves a lasting impression.</p>
+                </div>
             </div>
         </section>
     </main>
