--- a/thanks.html
+++ b/thanks.html
@@ -54,13 +54,15 @@
 
         <!-- Hero section -->
         <section id="hero">
-            <div id="cover-text-test">
-                <h1>Thank you for your feedback!</h1>
-            </div>
-            <div>
-                <a href="feedback.html">
-                    <button class="header-button">Click here to get back</button>
-                </a>
+            <div id="thank-you">
+                <div id="thank-you-text">
+                    <h1>Thank you for your feedback!</h1>
+                </div>
+                <div>
+                    <a href="feedback.html">
+                        <button class="header-button">Click here to get back</button>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
