content in index

--- a/index.html
+++ b/index.html
@@ -65,6 +65,34 @@
                 </div>
             </div>
         </section>
+        <!-- History section-->
+        <section>
+            <div id="history">
+                <div >
+                    <h3></h3>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <h3></h3>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <h3></h3>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </div>
+                <div>
+                    <h3></h3>
+                    <p></p>
+                </div>
+            </div>
+
+        </section>
     </main>
 
 
