Index cover text

--- a/index.html
+++ b/index.html
@@ -54,14 +54,10 @@
         <!-- Hero section -->
         <section id="hero">
             <div id="info">
-                <h2>Have you ever wanted to taste a bit of luxury?</h2>
                 <div id="info-text">
+                    <h1>Do you want to taste a bit of luxury?</h1>
                     <p>Experience the culinary artistry of canapés 
-                    firsthand. Discover a world of flavors, textures, 
-                    and creativity in every bite.
-                    From smoked salmon on crostini to white chocolate mousse,
-                    each canapé is a delightful masterpiece that elevates
-                    your gatherings and leaves a lasting impression.</p>
+                    firsthand!</p>
                 </div>
             </div>
         </section>
