--- a/index.html
+++ b/index.html
@@ -62,33 +62,33 @@
             </div>
         </section>
         <!-- History section-->
-        <section>
-            <div id="history">
-                <div >
-                    <h3></h3>
-                    <p></p>
-                    <p></p>
-                    <p></p>
+    <section id="events">
+        <h2>What can you buy canapes for</h2>
+        <div id="events-list">
+            <div class="event-right">
+                <div>
+                    <h2>After work</h2>
+                    <hr>
+                    <p>
+                    Hors-d'œuvre in French literally means "outside the work". Ironically, nothing beats charcuterie and crudités for
+                    business events, client meetings or after-works. With our seasonal menu and a wide range of cuts on the menu, there is
+                    always something new to look forward to.</p>
                 </div>
                 <div>
-                    <h3></h3>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                </div>
-                <div>
-                    <h3></h3>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                </div>
-                <div>
-                    <h3></h3>
-                    <p></p>
+                    <h2 class="event-left">Weddings</h2>
+                    <hr>
+                    <p>If you can think of anything more appropriate than canapés at a champagne reception, we'd love to know. Simple bubbles
+                    and a tasty elegant bitesize piece that is easy to get when passed on a serving tray by a waiter.</p>
                 </div>
             </div>
-
-        </section>
+            <div class="event-right">
+                <div>
+                    <h2>Student parties</h2>
+                    <hr>
+                    <p>The party snack. There are only so many Nutella pizza photos you can post on Instagram, all of our hors d'oeuvre 
+                        series are as photogenic as they are delicious..</p>
+                </div>
+            </div>
     </main>
 
 
