added photos and scaled down

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section id="events">
         <h2>What can you buy canapes for</h2>
         <div id="events-list">
-            <div class="event-right">
+            <div class="event-right" id="after-work">
                 <div>
                     <h2>After work</h2>
                     <hr>
@@ -73,20 +73,25 @@
                     Hors-d'œuvre in French literally means "outside the work". Ironically, nothing beats charcuterie and crudités for
                     business events, client meetings or after-works. With our seasonal menu and a wide range of cuts on the menu, there is
                     always something new to look forward to.</p>
+                    <img src="assets/images/after-work.jpg" alt="man holding a briefcase and walking away">
                 </div>
-                <div>
+                <div class="event-left" id="wedding">
+                    
                     <h2 class="event-left">Weddings</h2>
                     <hr>
                     <p>If you can think of anything more appropriate than canapés at a champagne reception, we'd love to know. Simple bubbles
                     and a tasty elegant bitesize piece that is easy to get when passed on a serving tray by a waiter.</p>
+                    <img src="assets/images/wedding.jpg" alt="A photo of a flower bouque with a golden ring ontop.">
                 </div>
             </div>
-            <div class="event-right">
+            <div class="event-right" id="student">
                 <div>
+                    
                     <h2>Student parties</h2>
                     <hr>
                     <p>The party snack. There are only so many Nutella pizza photos you can post on Instagram, all of our hors d'oeuvre 
                         series are as photogenic as they are delicious..</p>
+                    <img src="assets/images/sdtudent-party.jpg" alt="Lots of young people sitting around a table filled with food having fun.">
                 </div>
             </div>
     </main>
