--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                         Hors-d'œuvre in French literally means "outside the work". Ironically, nothing beats charcuterie and crudités for
                         business events, client meetings or after-works. With our seasonal menu and a wide range of cuts on the menu, there is
                         always something new to look forward to.</p>
-                        <img src="assets/images/after-work.jpg" alt="man holding a briefcase and walking away">
+                        <div class="index-image">
+                            <div id="circle-after-work"></div>
+                        </div>
                     </div>
                     <div class="event-left" id="wedding">
                         
@@ -81,7 +83,9 @@
                         <hr>
                         <p>If you can think of anything more appropriate than canapés at a champagne reception, we'd love to know. Simple bubbles
                         and a tasty elegant bitesize piece that is easy to get when passed on a serving tray by a waiter.</p>
-                        <img src="assets/images/wedding.jpg" alt="A photo of a flower bouque with a golden ring ontop.">
+                        <div class="index-image">
+                            <div id="circle-wedding"></div>
+                        </div>
                     </div>
                 </div>
                 <div class="event-right" id="student">
@@ -91,7 +95,11 @@
                         <hr>
                         <p>The party snack. There are only so many Nutella pizza photos you can post on Instagram, all of our hors d'oeuvre 
                             series are as photogenic as they are delicious..</p>
-                        <img src="assets/images/sdtudent-party.jpg" alt="Lots of young people sitting around a table filled with food having fun.">
+                        <div class="index-image">
+                            <div id="circle-student"></div>
+                        </div>
+                        <!--<img src="assets/images/sdtudent-party.jpg" alt="Lots of young people sitting around
+                         a table filled with food having fun.">-->
                     </div>
                 </div>
             </div>
