--- a/index.html
+++ b/index.html
@@ -65,24 +65,20 @@
         <section id="events">
             <h2>What can you buy canapes for</h2>
             <div id="events-list">
-                
-                <div class="event-right" id="after-work">
-                    <div>
-                        <h2>After work</h2>
-                        <hr>
-                        <p>
+
+                <div class="event-left" id="after-work">
+                    <h2>After work</h2>
+                    <p>
                         Hors-d'œuvre in French literally means "outside the work". Ironically, nothing beats charcuterie and crudités for
                         business events, client meetings or after-works. With our seasonal menu and a wide range of cuts on the menu, there is
                         always something new to look forward to.</p>
-                        <div class="index-image">
-                            <div id="circle-after-work"></div>
-                        </div>
+                    <div class="index-image">
+                        <div id="circle-after-work"></div>
                     </div>
                 </div>
 
-                <div class="event-left" id="wedding"> 
-                    <h2 class="event-left">Weddings</h2>
-                    <hr>
+                <div class="event-right" id="wedding"> 
+                    <h2>Weddings</h2>
                     <p>If you can think of anything more appropriate than canapés at a champagne reception, we'd love to know. Simple bubbles
                     and a tasty elegant bitesize piece that is easy to get when passed on a serving tray by a waiter.</p>
                     <div class="index-image">
@@ -90,18 +86,17 @@
                     </div>
                 </div>
 
-                <div class="event-right" id="student">
-                    <div>
-                        <h2>Student parties</h2>
-                        <hr>
-                        <p>The party snack. There are only so many Nutella pizza photos you can post on Instagram, all of our hors d'oeuvre 
-                            series are as photogenic as they are delicious..</p>
-                        <div class="index-image">
-                            <div id="circle-student"></div>
-                        </div>
-                        <!--<img src="assets/images/sdtudent-party.jpg" alt="Lots of young people sitting around
-                         a table filled with food having fun.">-->
+                <div class="event-left" id="student">
+                    <h2>Student parties</h2>
+                    <p> Forget about the usual snacks; let's take your celebrations to a whole new level. From savory bites that'll satisfy your
+                        late-night cravings to sweet treats that'll keep the energy flowing on the dance floor, our canapés are here to make
+                        your student parties legendary. Get ready to munch, mingle, and make memories that'll last a lifetime. Because at our
+                        parties, the good times are bite-sized, and the fun never stops!</p>
+                    <div class="index-image">
+                        <div id="circle-student"></div>
                     </div>
+                        <!--<img src="assets/images/sdtudent-party.jpg" alt="Lots of young people sitting around
+                     a table filled with food having fun.">-->
                 </div>
             </div>
         </main>
