thanks page update, added background, index styling

--- a/feedback.html
+++ b/feedback.html
@@ -64,7 +64,7 @@
     <!-- Main content -->
     <main>
       <!-- Hero section -->
-      <section id="hero">
+      <section id="hero-feedback">
         <div id="cover-text">
           <h2></h2>
         </div>
@@ -82,6 +82,13 @@
                 did not think they could be as good as they looked. But colour
                 me surprised!
               </p>
+            </div>
+            <div class="comment">
+                <p>
+                Indulging in the exquisitely presented canapé was akin to embarking on a gastronomic odyssey. The delicate balance of
+                flavors, harmoniously interwoven, transcended mere culinary artistry; it was an orchestra of taste that danced on the
+                palate.
+                </p>
             </div>
           </div>
 
