--- a/thanks.html
+++ b/thanks.html
@@ -50,18 +50,13 @@
 
 
     <!-- Main content -->
-    <main>
+    <main id="main-thanks">
 
         <!-- Hero section -->
-        <section id="hero">
+        <section id="hero-thanks">
             <div id="thank-you">
                 <div id="thank-you-text">
-                    <h1>Thank you for your feedback!</h1>
-                </div>
-                <div>
-                    <a href="feedback.html">
-                        <button class="header-button">Click here to get back</button>
-                    </a>
+                    <h3>Thank you for your feedback!</h3>
                 </div>
             </div>
         </section>
