--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         <main>
             <!-- Hero section -->
             <section id="hero">
+                <div id="title">
+                    <h3>Ms hors d'ouevre</h3>
+                    <p>Bite-sized goodness</p>
+                </div>
                 <div id="info">
                     <div id="info-text">
                         <h1>Do you want to taste a bit of luxury?</h1>
@@ -80,8 +84,8 @@
 
                 <div class="event-right" id="wedding"> 
                     <h2>Weddings</h2>
-                    <p>If you can think of anything more appropriate than canapés at a champagne reception, we'd love to know. Simple bubbles
-                    and a tasty elegant bitesize piece that is easy to get when passed on a serving tray by a waiter.</p>
+                    <p>If you can think of anything more appropriate than canapés at a champagne reception, we'd love to know. Because we believe that canapes are perfect for weddings!
+                    Tasty and elegant bite-sized pieces that opens a whole new world of flavour.</p>
                     <div class="index-image">
                         <div id="circle-wedding"></div>
                     </div>
@@ -90,7 +94,7 @@
                 <div class="event-left" id="student">
                     <h2>Student parties</h2>
                     <p> Forget about the usual snacks; let's take your celebrations to a whole new level. From savory bites that'll satisfy your
-                        late-night cravings to sweet treats that'll keep the energy flowing on the dance floor, our canapés are here to make
+                        late-night cravings to sweet treats that'll keep the energy flowing on the dance floor. Our canapés are here to make
                         your student parties legendary. Get ready to munch, mingle, and make memories that'll last a lifetime. Because at our
                         parties, the good times are bite-sized, and the fun never stops!</p>
                     <div class="index-image">
