removed shop style/html, added img

--- a/shop.html
+++ b/shop.html
@@ -70,6 +70,15 @@
             <div>
                 <img src="assets/images/Lactos-free-white-mousse.jpg" alt="">
             </div>
+            <div>
+                <img src="assets/images/canape-multiple.png" alt="">
+            </div>
+            <div>
+                <img src="assets/images/canape-multiple2.png" alt="">
+            </div>
+            <div>
+                <img src="assets/images/canape-polenta.png" alt="">
+            </div>
         </section>      
     </main>
 
