pictures styling shop

--- a/shop.html
+++ b/shop.html
@@ -45,7 +45,7 @@
     </header>
 
     <!-- Main content -->
-    <main>
+    <main id="shop-main">
 
         <!-- Hero section -->
         <section id="hero-shop">
@@ -56,29 +56,42 @@
 
         <section id="shop">
             <div id="shop-item">
-                <img src="assets/images/Salmon-roll-blini.jpg" alt="">
+                <img src="assets/images/Salmon-roll-blini.jpg" alt="A salmon roll canape on top of a blini topped with mascarpone, lemon zest and peppar">
             </div>
             <div>
-                <img src="assets/images/Salmon-mousse.jpg" alt="">
+                <img src="assets/images/Salmon-mousse.jpg" alt="A salmon mousse topped with kaviar and dill">
             </div>
             <div>
-                <img src="assets/images/Filo-goats-cheese.jpg" alt="">
+                <img src="assets/images/Filo-goats-cheese.jpg" alt="A filobasket canape, filled with goats cheese and topped with elder berry, beetroot and cress">
             </div>
             <div>
-                <img src="assets/images/Duck-liver-mousse.jpg" alt="">
+                <img src="assets/images/Duck-liver-mousse.jpg" alt="A duckliver canape on bread topped with caramilized orange zest">
             </div>
             <div>
-                <img src="assets/images/Lactos-free-white-mousse.jpg" alt="">
+                <img src="assets/images/Lactos-free-white-mousse.jpg" alt="Laktosfree white mousse with passionfruit jelly">
             </div>
             <div>
-                <img src="assets/images/canape-multiple.png" alt="">
+                <img src="assets/images/canape-multiple.png" alt="Multiple canapes in rows">
             </div>
             <div>
-                <img src="assets/images/canape-multiple2.png" alt="">
+                <img src="assets/images/canape-multiple2.png" alt="Multiple canapes in a row">
             </div>
             <div>
-                <img src="assets/images/canape-polenta.png" alt="">
+                <img src="assets/images/canape-cnantarelle.png" alt="chanterelle and Västerbotten cheese mousse topped with mascarpone">
             </div>
+            <div>
+                <img src="assets/images/canape-lobster.png" alt="A lobster roll canape in brioche bread topped with parsley">
+            </div>
+            <div>
+                <img src="assets/images/canape-rotselleri.png" alt="A celeriac canape with browned butter Piedmont hazelnuts on black crackers">
+            </div>
+            <div>
+                <img src="assets/images/canape-tigershrimp.png" alt="A tigershrimp with a spicy bloody mary pimpette">
+            </div>
+            <div>
+                <img src="assets/images/blurry-pic.png" alt="A tigershrimp with a spicy bloody mary pimpette">
+            </div>
+
         </section>      
     </main>
 
