--- a/thanks.html
+++ b/thanks.html
@@ -18,7 +18,7 @@
     
     
     <!-- Favicon -->
-    <link rel="canape-icon" sizes="180x180" href="assets/favicon/canape-icon.png">
+    <link rel="icon" sizes="180x180" href="assets/favicon/canape-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
 
