--- a/shop.html
+++ b/shop.html
@@ -50,7 +50,7 @@
         <!-- Hero section -->
         <section id="hero-shop">
             <div id="cover-text-shop">
-                <h2>Our Products</h2>
+                <h1>Our Products</h1>
             </div>
         </section>
 
@@ -89,7 +89,7 @@
                 <img src="assets/images/canape-tigershrimp.png" alt="A tigershrimp with a spicy bloody mary pimpette">
             </div>
             <div>
-                <img src="assets/images/blurry-pic.png" alt="A tigershrimp with a spicy bloody mary pimpette">
+                <img src="assets/images/blurry-pic.png" alt="An image of a plate of canapes">
             </div>
 
         </section>      
