ReadMe + small changes for validation

--- a/feedback.html
+++ b/feedback.html
@@ -6,13 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!-- Meta tags for search engines -->
-    <meta
-      name="description"
-      content="Canape shop. Buy canapes for good prices in Sweden, Stockholm. Catering offering small bite-size delicacies."/>
-    <meta
-      name="keywords"
-      content="food, catering, canape, canapes, canape queen, delicious, catering shop, shop, buy,
-    catering östermalm, luxery eating, bite-size, ms hors douvre"/>
+    <meta name="description" content="Canape shop. Buy canapes for good prices in Sweden, Stockholm. Catering offering small bite-size delicacies."/>
+    <meta name="keywords" content="food, catering, canape, canapes, canape queen, delicious, catering shop, shop, buy, catering östermalm, luxery eating, bite-size, ms hors douvre"/>
 
     <!-- Title -->
     <title>Ms Hors D'ouvre</title>
