--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </section>
 
-            <!-- History section-->
+            <!-- Events section-->
             <section id="events">
                 <h2>What can you buy canapes for</h2>
                 <div id="events-list">
@@ -75,7 +75,7 @@
                         <h2>After work</h2>
                         <p>
                         Hors-d'œuvre in French literally means "outside the work". Ironically, nothing beats charcuterie and crudités for
-                        business events, client meetings or after-works. With our seasonal menu and a wide range of cuts on the menu, there is
+                        business events, client meetings or after-works. With our wide range of items on the menu, there is
                         always something new to look forward to.</p>
                         <div class="index-image">
                             <div id="circle-after-work"></div>
