--- a/shop.html
+++ b/shop.html
@@ -55,6 +55,7 @@
         </section>
 
         <section id="shop">
+            <h5>Shop Items</h5>
             <div id="shop-item">
                 <img src="assets/images/Salmon-roll-blini.jpg" alt="A salmon roll canape on top of a blini topped with mascarpone, lemon zest and peppar">
             </div>
