--- a/feedback.html
+++ b/feedback.html
@@ -25,7 +25,7 @@
 
     <!-- Header -->
     <header>
-      <a href="index.html">
+      <a href="index.html" aria-label="Goes to the home page">
         <h4>Ms</h4>
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle"/>
@@ -81,7 +81,7 @@
                 <h2>Your feedback is always welcome</h2>
                 <form id="comment-form" action="thanks.html">
                     <textarea id="comment-input" name="comment-input" placeholder="Write a comment..." rows="10" cols="20"></textarea>
-                    <button type="submit">Submit</button>
+                    <button type="submit" aria-label="Press the button in order to send your feedback to us">Submit</button>
                 </form>
             </div>
         </section>
