--- a/thanks.html
+++ b/thanks.html
@@ -32,7 +32,7 @@
 
     <!-- Header -->
     <header>
-        <a href="index.html">
+        <a href="index.html" aria-label="Goes to the home page">
             <h4>Ms</h4>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
